Frontend JS and Chart

--- a/public/index.html
+++ b/public/index.html
@@ -19,25 +19,25 @@
       <form id="vote-form">
         <p>
             <label>
-              <input class="with-gap" name="os" id="windows" type="radio"  />
+              <input class="with-gap" name="os" id="windows" type="radio" value="Windows"  />
               <span>Windows</span>
             </label>
         </p>
         <p>
             <label>
-              <input class="with-gap" name="os" id="macos" type="radio"  />
+              <input class="with-gap" name="os" id="macos" type="radio" value="MacOS"  />
               <span>MacOS</span>
             </label>
         </p>
         <p>
             <label>
-              <input class="with-gap" name="os" id="linux" type="radio"  />
+              <input class="with-gap" name="os" id="linux" type="radio" value="Linux" />
               <span>Linux Distro</span>
             </label>
         </p>
         <p>
             <label>
-              <input class="with-gap" name="os" id="others" type="radio"  />
+              <input class="with-gap" name="os" id="other" type="radio" value="Other" />
               <span>Other</span>
             </label>
         </p>
